Fiz ajustes em ambas as páginas criadas até aqui, além de ajustar os arquivos CSS e JavaScript para adicionar feed dinâmico de projetos e ajustar layout da seção do blog.

--- a/Projects.html
+++ b/Projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,7 +70,9 @@
                             <p>
                                 O "First Robot" é uma excelente demonstração de como integrar hardware e software para criar uma solução robótica funcional e acessível. Este projeto serve como uma base sólida para futuros desenvolvimentos em automação e robótica, podendo ser expandido com sensores adicionais e algoritmos de controle mais avançados.
                             </p>
-                            <button>Solicitar Acesso</button> <!-- Botão movido para o final da descrição completa -->
+                            <div class="button-container">
+                                <button>Solicitar Acesso</button>
+                            </div>                            
                         </div>
                     </div>
                 </div>
