--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,15 +39,19 @@
                 <button>Vamos nos conectar!</button>
                 <button>Contato</button>
             </section>
+            
             <section class="projects">
                 <h2>Meus últimos projetos</h2>
-                <!-- List of projects -->
+                <div id="news-project-container"></div> <!-- Contêiner para os projetos -->
             </section>
-            <section class="blog">
-                <h2>Últimas informações do Blog</h2>
-                <!-- Blog posts -->
+            
+            <!-- Adicione a nova seção de Feed de Notícias aqui -->
+            <section class="news-feed">
+                <h2>Últimas Atualizações do Blog</h2>
+                <div id="news-container"></div>
             </section>
-        </main>
+        </main>        
     </div>
+    <script src="scripts.js"></script> <!-- Arquivo JS -->
 </body>
 </html>
